save notifications list state across tab changes and add badge to bottom bar icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,10 @@
     <string name="sign_in_username_email">Username/Email</string>
     <string name="sign_up_unknown_error">Something went wrong. Please try again later.</string>
 
+    <string name="home_bottom_bar_notifications_description">Notifications</string>
+    <string name="home_bottom_bar_settings_description">Settings</string>
+    <string name="home_bottom_bar_map_description">View Map</string>
+
     <string name="map_search_no_results">No results found for "%s"</string>
 
     <string name="profile_add_friend_button_text">Add Friend</string>
